# fxconv

./: .gitignore  CMakeLists.txt  Cargo.toml  README.md  application.cpp  main.cpp
include/: application.hpp
src/: application.cpp  application.rs  cliparser.rs  collector.rs  converter.rs  formatter.rs  fxconv.rs  fxtickconv.rs  grouper.rs  line_producer.rs  main.rs  producer.rs  settings.rs  writer.rs
src/market/: timeframe.rs
tests/: in00.csv  out00.csv  out01.csv  run.sh
